2001-10-10  Jody Goldberg <jgoldberg@home.com>

	* src/colrow.c (colrow_visibility) : we stop wither at the edge, or 1
	  past the last match.

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	* src/mstyle.c (mstyle_merge) : delete.

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	* src/plugin-util.c (gnumeric_fopen) : be smarter about what type of
	  error to report.

	* src/xml-io.c (gnumeric_xml_write_workbook) : switch to manually
	  opening the file then dumping to prepare for xml2.  Apparently it
	  attempts to escape file names.
	* src/xml-io-autoft.c (gnumeric_xml_write_format_template) : ditto.

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (gnumeric_xml_set_compression) : new utility.
	(gnumeric_xml_write_selection_clipboard) : Used here.
	(gnumeric_xml_write_workbook) : and here.

2001-10-10  Almer S. Tigelaar  <almer@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=62006
	* src/stf-parse.c (stf_parse_csv_is_separator): Tidy.
	(stf_parse_csv_cell): Fix handling of multiple separators.
	(stf_parse_get_colcount): Idem.
	(stf_parse_get_colwidth): Idem.

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62031
	* src/sheet-control-gui.c (scg_cursor_extend) : Make this smarter.
	  only make the dimension that changed visible, there is no need to
	  jump to the corner.

	* src/gui-util.h (color_combo_get_style_color) : add missing decl.

2001-10-08    J.H.M. Dassen (Ray) <jdassen@debian.org>

	* src/workbook-control-gui.c (cb_edit_fill_autofill) : 
	  Don't use C++/C99 `//' comment.

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-graph.c (gnm_graph_vector_seq_scalar) : Fix row vectors.
	(gnm_graph_vector_seq_date) : ditto.
	(gnm_graph_vector_seq_string) : ditto.

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62030
	* src/gui-util.c (color_combo_get_style_color) : new utility.